# tacsters

./: Agent.cpp  Agent.h  AgentDet.h  CMakeLists.txt  agentdet.cpp  battlefield.cpp  battlefield.h  battlefield.ui  cell.cpp  cell.h  crystalgridview.cpp  crystalgridview.h  fantasybutton.cpp  fantasybutton.h  fantasyedit.cpp  fantasyedit.h  fantasylabel.cpp  fantasylabel.h  gallery.cpp  gallery.h  gallery.ui  gamemanager.cpp  gamemanager.h  gamephases.cpp  gamephases.h  hexboard.cpp  hexboard.h  main.cpp  mainwindow.cpp  mainwindow.h  mapreader.cpp  mapreader.h  namesdialog.cpp  namesdialog.h  resources.qrc  splash.cpp  splash.h  splash.ui
